--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -31,7 +31,7 @@
 <div class="Overlay">
   <div class="OverlayClose">Close</div>
   <div class="OverlayContent">
-    <div class="OfficialContainer"></div>
+    <div class="OfficialRoster"></div>
   </div>
 
 </div>
