--- a/_resources/_styles/overlays.styl
+++ b/_resources/_styles/overlays.styl
@@ -63,49 +63,55 @@
 // OFFICIALS
 
 .OfficialRoster {
-  display: flex;
-  flex-direction: column;
-  padding: 1rem;
-  font-size: 1.3rem;
-}
+   display: flex;
+   flex-direction: column;
+  //  padding: 1rem;
+  //  font-size: 1.3rem;
+ }
   @media laptop {
-    .OfficialRoster {
-      flex-direction: row;
-      flex-wrap: wrap;
-      // padding: 0 0 0 3rem;
-    }
-  }
+     .OfficialRoster {
+       flex-direction: row;
+       flex-wrap: wrap;
+     }
+   }
 .OfficialSingle {
-  padding: 5rem 2rem 3rem 0;
+  display: flex;
+  flex-direction: row;
+  // width: 25rem;
+  // padding: 5rem 2rem 3rem 0;
   word-break: break-word;
 }
- @media laptop {
-   .OfficialSingle {
-    width: 23vw;
-  }
- }
-// Specified phone instead of laptop because I couldn't undo `margin: 0 auto` with a laptop media query. Idk if I did something wrong, but it works.
-  @media phone {
-    .OfficialRoster {
-      margin: 0 auto;
-    }
-  }
-.OfficialInfo {
-  margin: 0 2rem 0 24rem;
-}
+
+// // Specified phone instead of laptop because I couldn't undo `margin: 0 auto` with a laptop media query. Idk if I did something wrong, but it works.
+//   @media phone {
+//     .OfficialRoster {
+//       margin: 0 auto;
+//     }
+//   }
 .OfficialPhoto {
   filter: grayscale(100%);
   width: 165px;
   height: 165px;
   margin: 0 0 0 5rem;
 }
+  @media laptop {
+    .OfficialPhoto {
+      width: 155px;
+      height: 155px;
+    }
+  }
+.OfficialInfo {
+  // margin: 0 2rem 0 24rem;
+  width: 13rem;
+  background: #97B2B6;
+}
 .OfficialOffice {
   margin: 0 0 1rem 0;
 }
-.OfficialName {
-  font-weight: bold;
-  font-size: 2rem;
-}
+// .OfficialName {
+//   font-weight: bold;
+//   font-size: 2rem;
+// }
 .OfficialDivider {
   width: 90%;
   border-bottom: 1px solid #ccc;
