--- a/public/master.css
+++ b/public/master.css
@@ -718,9 +718,14 @@ label.error {
     opacity: 0.8;
   }
 }
+.OfficialRoster p {
+  font-size: 1.3rem;
+}
 .OfficialRoster {
   display: flex;
   flex-direction: column;
+  margin: 1rem;
+  justify-content: center;
 }
 @media (min-width: 62em) {
   .OfficialRoster {
@@ -731,23 +736,23 @@ label.error {
 .OfficialSingle {
   display: flex;
   flex-direction: row;
-  word-break: break-word;
+  align-items: center;
+  margin: 1rem 0;
 }
 .OfficialPhoto {
   filter: grayscale(100%);
   width: 165px;
   height: 165px;
-  margin: 0 0 0 5rem;
+  margin: 0 3rem 0 3rem;
 }
 @media (min-width: 62em) {
   .OfficialPhoto {
-    width: 155px;
-    height: 155px;
+    width: 125px;
+    height: 125px;
   }
 }
 .OfficialInfo {
   width: 13rem;
-  background: #97b2b6;
 }
 .OfficialOffice {
   margin: 0 0 1rem 0;
