--- a/_resources/_styles/overlays.styl
+++ b/_resources/_styles/overlays.styl
@@ -41,8 +41,13 @@
   opacity: .5;
 }
 .OverlayContent {
-  margin-top: 55px;
+  margin: 3rem 0 0 0;
 }
+  @media laptop {
+    .OverlayContent {
+      margin: 5.5rem 0 0 0;
+    }
+  }
 @media laptop {
   .OverlayScrim {
     position: absolute;
@@ -67,7 +72,7 @@
 .OfficialRoster {
    display: flex;
    flex-direction: column;
-   margin: 1rem;
+   margin: 3rem 1rem 1rem 1rem;
    justify-content: center;
  }
   @media laptop {
@@ -110,3 +115,59 @@
   margin: 0 auto;
   height: 1px;
 }
+
+// CITY AND STATE HEADING
+
+.OverlayCityContainer {
+  position: relative;
+  width: 93%;
+  margin: 0 1rem;
+  height: 3rem;
+  border-bottom: 1px solid #000;
+  font-size: 1.3rem;
+}
+  @media laptop {
+    .OverlayCityContainer {
+      width: 40%;
+      left: 7rem;
+    }
+}
+.OverlayCityClear {
+  position: relative;
+  top: -2rem;
+  left: 75vw;
+}
+  @media laptop {
+    .OverlayCityClear {
+      top: -1.8rem;
+      left: 22rem;
+    }
+  }
+.OverlayClose {
+  position: relative;
+  top: -2.4rem;
+  right: -4.5rem;
+  height: 32px;
+  width: 32px;
+  background: url(_img/close.svg) no-repeat;
+  background-size: 16px;
+  background-position: center center;
+  border-radius: 50px;
+  border: none;
+  outline: none;
+  text-indent: -99999px;
+}
+.MissingSomeone {
+  display: none;
+}
+  @media laptop {
+    .MissingSomeone {
+      display: block;
+      position: relative;
+      top: -2rem;
+      left: 70%;
+      border-bottom: 1px solid #000;
+      width: 13.4rem;
+      font-size: 1.3rem;
+    }
+  }
