--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -29,10 +29,32 @@
 <body>
 <div id="SnackbarCont"></div>
 <div class="Overlay">
-  <div class="OverlayClose">Close</div>
+  <!-- <div class="OverlayClose">Close</div> -->
   <div class="OverlayContent">
+    <div class="OverlayCityContainer">
+      <div class="OverlayCity">Seattle, WA 98144</div>
+      <div class="op50 OverlayCityClear">
+        Clear
+          <div class="OverlayClose">Close</div>
+        </div>
+      </div>
+    </div>
+    <a class="op50 MissingSomeone">Did we miss someone?</a>
     <div class="OfficialRoster"></div>
-  </div>
 
+<!-- No idea where to put this Share This module -->
+
+    <!-- <div>
+      <h2 class="ml3">
+        Share this?
+      </h2>
+      <div class="ShareContainer">
+        <input type="text" value="http://who-represents.me" class="InputShare">
+        <button class="BtnShare">
+          Copy link
+        </button>
+      </div>
+    </div> -->
+  </div>
 </div>
 <div class="OverlayScrim"></div>
