--- a/views/index.ejs
+++ b/views/index.ejs
@@ -13,14 +13,14 @@
     <input type="tel" name="zip" id="zipInput" value="98144" class="InputZip">
     <input type="submit" value="Go" class="SubmitZip">
   </form>
-  <div class="LandingPageQuote WhiteText">
+  <!-- <div class="LandingPageQuote WhiteText">
     <p class="Italic">
       &ldquo;When the people become involved... government becomes more accountable, and our society is stronger.&rdquo;
     </p>
     <p class="mt4">
       &ndash;Arnold Schwarzenegger
     </p>
-  </div>
+  </div> -->
   <p class="SiteCredit">
     Built by <a href="https://twitter.com/jeremypbeasley" target="_blank"><span class="BlackText BorderBottomBlack">@jeremypbeasley</span></a> and <a href="https://twitter.com/jennminerva" target="_blank"><span class="BlackText BorderBottomBlack">@jennminerva</span></a>
   </p>
