--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -31,7 +31,7 @@
 <div class="Overlay">
   <!-- <div class="OverlayClose">Close</div> -->
   <div class="OverlayContent">
-    <div class="OverlayCityContainer">
+    <!-- <div class="OverlayCityContainer">
       <div class="OverlayCity">Seattle, WA 98144</div>
       <div class="op50 OverlayCityClear">
         Clear
@@ -39,7 +39,7 @@
         </div>
       </div>
     </div>
-    <a class="op50 MissingSomeone">Did we miss someone?</a>
+    <a class="op50 MissingSomeone">Did we miss someone?</a> -->
     <div class="OfficialRoster"></div>
 
 <!-- No idea where to put this Share This module -->
