--- a/views/index.ejs
+++ b/views/index.ejs
@@ -3,7 +3,7 @@
 <div class="HeroImgContainer"></div>
 <div class="ContentContainer">
   <div class="TinyLogo"></div>
-  <h1 class="WhiteText">
+  <h1 class="HeadingLarge WhiteText">
     Do you know who represents you?
   </h1>
   <form id="zipForm">
