--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -29,18 +29,23 @@
 <body>
 <div id="SnackbarCont"></div>
 <div class="Overlay">
+  <div class="OverlayClose"></div>
+  <div class="OverlayCityContainer">
+    <div class="OverlayCity">Seattle, WA (98144)</div>
+    <!-- <div class="op50 OverlayCityClear">
+      Clear
+    </div> -->
+  </div>
   <div class="OverlayContent">
     <div class="OfficialRoster"></div>
-    <div>
-      <h2 class="ml3">
-        Share this?
-      </h2>
-      <div class="ShareContainer">
-        <input type="text" value="http://who-represents.me" class="InputShare">
-        <button class="BtnShare">
-          Copy link
-        </button>
-      </div>
+    <h2 class="HeadingMedium l3">
+      Share this?
+    </h2>
+    <div class="ShareContainer">
+      <input type="text" value="http://who-represents.me" class="InputShare">
+      <button class="BtnShare">
+        Copy link
+      </button>
     </div>
   </div>
 </div>
