--- a/_resources/_styles/type.styl
+++ b/_resources/_styles/type.styl
@@ -33,7 +33,7 @@ h1,h2,h3,h4,h5,h6 {
 	position relative
 	cursor: default;
 }
-h1 {
+.HeadingLarge {
 	font-family: 'Iowanoldstyle', serif;
 	font-size: 3rem;
   margin: 7rem 4rem 0 4rem;
@@ -41,14 +41,18 @@ h1 {
   width: 75%;
 }
   @media laptop {
-    h1 {
+    .HeadingLarge {
       width: 60%;
       font-size: 6rem;
     }
   }
-h2 {
+.HeadingMedium {
   font-size: 2.6rem;
-    font-family: 'Iowanoldstyle', serif;
+  font-family: 'Iowanoldstyle', serif;
+}
+.HeadingSmall {
+	font-family: 'CircularStdBold', sans-serif;
+	font-size: 2rem;
 }
 .Caption {
 	font-size: 1.1rem;
