added word-wrap to OfficialName

--- a/_resources/_styles/overlays.styl
+++ b/_resources/_styles/overlays.styl
@@ -92,10 +92,10 @@
 .OfficialOffice {
   margin: 0 0 1rem 0;
 }
-// .OfficialName {
-//   font-weight: bold;
-//   font-size: 2rem;
-// }
+.OfficialName {
+  word-wrap: break-word;
+  width: 13rem;
+}
 .OfficialDivider {
   width: 90%;
   border-bottom: 1px solid #ccc;
