--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -38,7 +38,7 @@
   </div>
   <div class="OverlayContent">
     <div class="OfficialRoster"></div>
-    <h2 class="HeadingMedium l3">
+    <!-- <h2 class="HeadingMedium l3">
       Share this?
     </h2>
     <div class="ShareContainer">
@@ -46,7 +46,7 @@
       <button class="BtnShare">
         Copy link
       </button>
-    </div>
+    </div> -->
   </div>
 </div>
 <div class="OverlayScrim"></div>
