removed border-bottom from city name and added divider between officials in mobile view

--- a/_resources/_styles/overlays.styl
+++ b/_resources/_styles/overlays.styl
@@ -102,6 +102,11 @@
   margin: 0 auto;
   height: 1px;
 }
+  @media laptop {
+    .OfficialDivider {
+      display: none;
+    }
+  }
 
 // CITY AND STATE HEADING
 
@@ -110,7 +115,7 @@
   width: calc(100% - unit6);
   margin: unit3;
   height: 3rem;
-  border-bottom: 1px solid #000;
+  // border-bottom: 1px solid #000;
   font-size: 1.3rem;
 }
   @media laptop {
