--- a/public/master.css
+++ b/public/master.css
@@ -770,12 +770,16 @@ label.error {
   margin: 0 auto;
   height: 1px;
 }
+@media (min-width: 62em) {
+  .OfficialDivider {
+    display: none;
+  }
+}
 .OverlayCityContainer {
   position: relative;
   width: calc(100% - unit6);
   margin: 24px;
   height: 3rem;
-  border-bottom: 1px solid #000;
   font-size: 1.3rem;
 }
 @media (min-width: 62em) {
