--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -36,17 +36,20 @@
       Clear
     </div> -->
   </div>
+
   <div class="OverlayContent">
     <div class="OfficialRoster"></div>
-    <!-- <h2 class="HeadingMedium l3">
-      Share this?
-    </h2>
-    <div class="ShareContainer">
-      <input type="text" value="http://who-represents.me" class="InputShare">
-      <button class="BtnShare">
-        Copy link
-      </button>
-    </div> -->
+      <h2 class="HeadingMedium ml3">
+        Share this?
+      </h2>
+      <div class="ShareContainer">
+        <input type="text" value="http://who-represents.me" class="InputShare">
+        <button class="BtnShare">
+          Copy link
+        </button>
+      </div>
+      <a class="MissingSomeone op50">Did we miss someone?</a>
+    </div>
   </div>
-</div>
+
 <div class="OverlayScrim"></div>
