styled city heading in laptop view

--- a/_resources/_styles/overlays.styl
+++ b/_resources/_styles/overlays.styl
@@ -121,8 +121,7 @@
   @media laptop {
     .OverlayCityContainer {
       width: 40%;
-      left: 7rem;
-      border-bottom: none;
+      left: 4rem;
     }
 }
 .OverlayCityClear {
@@ -150,6 +149,12 @@
   outline: none;
   text-indent: -99999px;
 }
+  @media laptop {
+    position: relative;
+    top: 8rem;
+    left: 46%;
+    opacity: .5;
+  }
 .MissingSomeone {
   border-bottom: 1px solid #000;
   width: 13.4rem;
