--- a/_resources/_styles/overlays.styl
+++ b/_resources/_styles/overlays.styl
@@ -167,8 +167,8 @@
     .MissingSomeone {
       display: block;
       position: relative;
-      top: -2rem;
-      left: 70%;
+      top: -87rem;
+      left: 733vw;
     }
   }
 
