--- a/_resources/_styles/overlays.styl
+++ b/_resources/_styles/overlays.styl
@@ -180,6 +180,9 @@
 
 // SHARE THIS MODULE
 
+.ShareContainer {
+  margin: 0 0 0 unit4;
+}
 @media laptop {
   .ShareContainer {
     margin: unit7 0 0 unit7;
@@ -190,7 +193,7 @@
   border-radius: 5px;
   width: 89%;
   max-width: 34rem;
-  margin: 2rem;
+  margin: 2rem 0 0 0;
 }
 @media laptop {
   .ShareModule {
@@ -207,7 +210,7 @@ input {
   border-radius: 0;
   border: none;
   height: 2.9rem;
-  width: 24rem;
+  width: 69%;
   margin: 0 0 0 .5rem;
   border-right: 1px solid #FF3700;
   background: transparent;
