styled SiteCredit in laptop view

--- a/_resources/_styles/landingpage.styl
+++ b/_resources/_styles/landingpage.styl
@@ -81,14 +81,14 @@ label {
     }
   }
 .SiteCredit {
-  margin: 6rem 14rem 0 4rem;
+  margin: 6rem 14rem 0 6rem;
   width: 50%;
 }
-@media laptop {
-  .BuiltBy {
-    width: 75%;
+  @media laptop {
+    .SiteCredit {
+      width: 75%;
+    }
   }
-}
 .BorderBottomBlack {
   border-bottom: 1px solid #000;
   padding: 0 0 2px 0;
@@ -99,13 +99,11 @@ label {
   text-align: center;
   background-position: center center;
   position: relative;
-  float: right;
-  top: -4rem;
-  right: 3rem;
+
 }
 @media laptop {
   .ImgGitHub {
-    right: 20rem;
-    top: -2rem;
+    top: 3px;
+    margin: 0 0 0 2rem;
   }
 }
