--- a/views/index.ejs
+++ b/views/index.ejs
@@ -21,12 +21,13 @@
       &ndash;Arnold Schwarzenegger
     </p>
   </div> -->
-  <p class="SiteCredit">
-    Built by <a href="https://twitter.com/jeremypbeasley" target="_blank"><span class="BlackText BorderBottomBlack">@jeremypbeasley</span></a> and <a href="https://twitter.com/jennminerva" target="_blank"><span class="BlackText BorderBottomBlack">@jennminerva</span></a>
-  </p>
-  <a href="https://github.com/jeremypbeasley/who-representsme" target="_blank">
-    <img class="ImgGitHub" src="_img/github_logo.png" alt="GitHub">
-  </a>
+  <div class="SiteCredit">
+    <p>
+      Built by <a href="https://twitter.com/jeremypbeasley" target="_blank"><span class="BlackText BorderBottomBlack">@jeremypbeasley</span></a> and <a href="https://twitter.com/jennminerva" target="_blank"><span class="BlackText BorderBottomBlack">@jennminerva</span></a>
+    </p>
+    <a href="https://github.com/jeremypbeasley/who-representsme" target="_blank">
+      <img class="ImgGitHub" src="_img/github_logo.png" alt="GitHub">
+  </div>
   <div id="officialList"></div>
 </div>
 
