--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -50,6 +50,12 @@
         </button>
       </div>
     </div>
+    <p class="SiteCredit">
+      Built by <a href="https://twitter.com/jeremypbeasley" target="_blank"><span class="BlackText BorderBottomBlack">@jeremypbeasley</span></a> and <a href="https://twitter.com/jennminerva" target="_blank"><span class="BlackText BorderBottomBlack">@jennminerva</span></a>
+      <a href="https://github.com/jeremypbeasley/who-representsme" target="_blank">
+      <img class="ImgGitHub" src="_img/github_logo.png" alt="GitHub">
+      </a>
+    </p>
     </div>
   </div>
 
