position SiteCredit in laptop and mobile views

--- a/_resources/_styles/landingpage.styl
+++ b/_resources/_styles/landingpage.styl
@@ -81,12 +81,12 @@ label {
     }
   }
 .SiteCredit {
-  margin: 6rem 14rem 0 6rem;
-  width: 50%;
+  margin: 6rem 0 2rem 3rem;
+  font-size: 1.3rem;
 }
   @media laptop {
     .SiteCredit {
-      width: 75%;
+      margin-left: 6rem;
     }
   }
 .BorderBottomBlack {
@@ -99,11 +99,11 @@ label {
   text-align: center;
   background-position: center center;
   position: relative;
-
+  top: 5px;
+  left: 2rem;
 }
 @media laptop {
   .ImgGitHub {
-    top: 3px;
     margin: 0 0 0 2rem;
   }
 }
