--- a/public/master.css
+++ b/public/master.css
@@ -970,12 +970,12 @@ label {
   }
 }
 .SiteCredit {
-  margin: 6rem 14rem 0 6rem;
-  width: 50%;
+  margin: 6rem 0 2rem 3rem;
+  font-size: 1.3rem;
 }
 @media (min-width: 62em) {
   .SiteCredit {
-    width: 75%;
+    margin-left: 6rem;
   }
 }
 .BorderBottomBlack {
@@ -988,10 +988,11 @@ label {
   text-align: center;
   background-position: center center;
   position: relative;
+  top: 5px;
+  left: 2rem;
 }
 @media (min-width: 62em) {
   .ImgGitHub {
-    top: 3px;
     margin: 0 0 0 2rem;
   }
 }
