landing page is cleaned up in mobile and laptop views

--- a/_resources/_styles/overlays.styl
+++ b/_resources/_styles/overlays.styl
@@ -226,3 +226,12 @@ input {
   color: #FF3700;
   padding: 0 1rem;
 }
+.OverlaySiteCredit {
+  margin: 6rem 0 2rem 3rem;
+  font-size: 1.3rem;
+}
+  @media laptop {
+    .OverlaySiteCredit {
+      margin-left: 6rem;
+    }
+  }
