--- a/views/index.ejs
+++ b/views/index.ejs
@@ -21,13 +21,12 @@
       &ndash;Arnold Schwarzenegger
     </p>
   </div> -->
-  <div class="SiteCredit">
-    <p>
-      Built by <a href="https://twitter.com/jeremypbeasley" target="_blank"><span class="BlackText BorderBottomBlack">@jeremypbeasley</span></a> and <a href="https://twitter.com/jennminerva" target="_blank"><span class="BlackText BorderBottomBlack">@jennminerva</span></a>
-    </p>
+  <p class="SiteCredit">
+    Built by <a href="https://twitter.com/jeremypbeasley" target="_blank"><span class="BlackText BorderBottomBlack">@jeremypbeasley</span></a> and <a href="https://twitter.com/jennminerva" target="_blank"><span class="BlackText BorderBottomBlack">@jennminerva</span></a>
     <a href="https://github.com/jeremypbeasley/who-representsme" target="_blank">
-      <img class="ImgGitHub" src="_img/github_logo.png" alt="GitHub">
-  </div>
+    <img class="ImgGitHub" src="_img/github_logo.png" alt="GitHub">
+    </a>
+  </p>
   <div id="officialList"></div>
 </div>
 
