--- a/_resources/_styles/landingpage.styl
+++ b/_resources/_styles/landingpage.styl
@@ -26,7 +26,7 @@
     width: 50%;
     position: relative;
     float: right;
-    padding: 0 0 0 11rem;
+    padding: 0 0 0 3vw;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
@@ -81,14 +81,9 @@ label {
     }
   }
 .SiteCredit {
-  margin: 6rem 0 2rem 3rem;
   font-size: 1.3rem;
+  margin: 17% 0 0 4rem;
 }
-  @media laptop {
-    .SiteCredit {
-      margin-left: 6rem;
-    }
-  }
 .BorderBottomBlack {
   border-bottom: 1px solid #000;
   padding: 0 0 2px 0;
