resized HeadingLarge using vw

--- a/_resources/_styles/type.styl
+++ b/_resources/_styles/type.styl
@@ -42,8 +42,8 @@ h1,h2,h3,h4,h5,h6 {
 }
   @media laptop {
     .HeadingLarge {
-      width: 60%;
-      font-size: 6rem;
+      width: 50%;
+      font-size: 4.5vw;
     }
   }
 .HeadingMedium {
