--- a/_resources/_styles/base.styl
+++ b/_resources/_styles/base.styl
@@ -145,13 +145,13 @@ label.error {
 }
 .Snackbar {
   width: 100%;
-  max-width: 400px;
+  // max-width: 400px;
   height: 60px;
   position: fixed;
   background-image: linear-gradient(101deg, #ff6100, #ff000d 47%, #500072);
   background-color: black;
   bottom: 0;
-  left: 0;
+  left: 50%;
   z-index: 9999;
   transform: translateY(60px);
   transition: all 200ms ease-out;
