--- a/public/master.css
+++ b/public/master.css
@@ -622,13 +622,12 @@ label.error {
 }
 .Snackbar {
   width: 100%;
-  max-width: 400px;
   height: 60px;
   position: fixed;
   background-image: linear-gradient(101deg, #ff6100, #ff000d 47%, #500072);
   background-color: #000;
   bottom: 0;
-  left: 0;
+  left: 50%;
   z-index: 9999;
   transform: translateY(60px);
   transition: all 200ms ease-out;
