--- a/_resources/_styles/base.styl
+++ b/_resources/_styles/base.styl
@@ -151,11 +151,16 @@ label.error {
   background-image: linear-gradient(101deg, #ff6100, #ff000d 47%, #500072);
   background-color: black;
   bottom: 0;
-  left: 50%;
+  left: 0;
   z-index: 9999;
   transform: translateY(60px);
   transition: all 200ms ease-out;
 }
+  @media laptop {
+    .Snackbar {
+      left: 50%;
+    }
+  }
 .Snackbar span {
   padding: 21px 16px;
   display: block;
