--- a/_resources/_styles/landingpage.styl
+++ b/_resources/_styles/landingpage.styl
@@ -1,14 +1,13 @@
 .HeroImgContainer {
-  background: url(_img/people_only.png);
+  background: url(_img/flag.jpg);
   background-repeat: no-repeat;
-  background-size: 100%;
+  background-size: cover;
   height: 35vh;
   width: 100%;
 }
 @media laptop {
   .HeroImgContainer {
-    background: url("_img/people_flag.png") no-repeat;
-    background-position: center center;
+    background-position: left center;
     background-size: cover;
     height: 100vh;
     width: 50%;
