--- a/public/master.css
+++ b/public/master.css
@@ -897,16 +897,15 @@ input {
   }
 }
 .HeroImgContainer {
-  background: url("_img/people_only.png");
+  background: url("_img/flag.jpg");
   background-repeat: no-repeat;
-  background-size: 100%;
+  background-size: cover;
   height: 35vh;
   width: 100%;
 }
 @media (min-width: 62em) {
   .HeroImgContainer {
-    background: url("_img/people_flag.png") no-repeat;
-    background-position: center center;
+    background-position: left center;
     background-size: cover;
     height: 100vh;
     width: 50%;
