repositioned github icon in laptop view

--- a/_resources/_styles/overlays.styl
+++ b/_resources/_styles/overlays.styl
@@ -235,3 +235,17 @@ input {
       margin-left: 6rem;
     }
   }
+.OverlayImgGitHub {
+  height: 18px;
+  width: 18px;
+  text-align: center;
+  background-position: center center;
+  position: relative;
+  top: 5px;
+  left: 2rem;
+}
+@media laptop {
+  .OverlayImgGitHub {
+    margin: 0 0 0 29rem;
+  }
+}
