--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -52,7 +52,7 @@
     <p class="OverlaySiteCredit">
       Built by <a href="https://twitter.com/jeremypbeasley" target="_blank"><span class="BlackText BorderBottomBlack">@jeremypbeasley</span></a> and <a href="https://twitter.com/jennminerva" target="_blank"><span class="BlackText BorderBottomBlack">@jennminerva</span></a>
       <a href="https://github.com/jeremypbeasley/who-representsme" target="_blank">
-      <img class="ImgGitHub" src="_img/github_logo.png" alt="GitHub">
+      <img class="OverlayImgGitHub" src="_img/github_logo.png" alt="GitHub">
       </a>
     </p>
     <div id="SnackbarCont"></div>
