repositioned HeroImg in mobile view

--- a/_resources/_styles/landingpage.styl
+++ b/_resources/_styles/landingpage.styl
@@ -4,6 +4,9 @@
   background-size: 100%;
   height: 35vh;
   width: 100%;
+  position: absolute;
+  bottom: -11rem;
+
 }
 @media laptop {
   .HeroImgContainer {
@@ -13,6 +16,7 @@
     height: 100vh;
     width: 50%;
     float: left;
+    top: 0;
   }
 }
 .ContentContainer {
@@ -82,7 +86,7 @@ label {
   }
 .SiteCredit {
   font-size: 1.3rem;
-  margin: 17% 0 0 4rem;
+  margin: 17% 0 5rem 4rem;
 }
 .BorderBottomBlack {
   border-bottom: 1px solid #000;
