--- a/public/master.css
+++ b/public/master.css
@@ -921,6 +921,8 @@ input {
   background-size: 100%;
   height: 35vh;
   width: 100%;
+  position: absolute;
+  bottom: -11rem;
 }
 @media (min-width: 62em) {
   .HeroImgContainer {
@@ -930,6 +932,7 @@ input {
     height: 100vh;
     width: 50%;
     float: left;
+    top: 0;
   }
 }
 .ContentContainer {
@@ -999,7 +1002,7 @@ label {
 }
 .SiteCredit {
   font-size: 1.3rem;
-  margin: 17% 0 0 4rem;
+  margin: 17% 0 5rem 4rem;
 }
 .BorderBottomBlack {
   border-bottom: 1px solid #000;
