major spacing refactor

--- a/_resources/_styles/overlays.styl
+++ b/_resources/_styles/overlays.styl
@@ -58,37 +58,48 @@
 .OfficialRoster {
    display: flex;
    flex-direction: column;
-   margin: unit3 unit1 unit6 unit1;
-   justify-content: center;
+   margin: unit3 unit2 0 unit2;
+   justify-content: flex-start;
  }
-  @media laptop {
-     .OfficialRoster {
-       flex-direction: row;
-       flex-wrap: wrap;
-       margin-bottom: unit4;
-     }
+@media laptop {
+   .OfficialRoster {
+     flex-direction: row;
+     margin: unit3 unit6 0 unit6;
+     flex-wrap: wrap;
    }
+ }
 .OfficialSingle {
   display: flex;
   flex-direction: row;
-  margin: unit5 0;
-  justify-content: center;
+  margin: 0;
+  justify-content: flex-start;
+}
+@media laptop {
+  .OfficialSingle {
+    width: 50%;
+    margin: 0 0 unit6 0;
+  }
 }
 .OfficialPhoto {
-  filter: grayscale(100%);
-  width: 35%;
-  height: 35%;
-  margin: 0 unit4 0 unit2;
+  width: 45%;
+  margin: 0 unit3 0 unit1;
 }
-  @media laptop {
-    .OfficialPhoto {
-      width: 125px;
-      height: 125px;
-    }
+@media laptop {
+  .OfficialPhoto {
+    margin: 0 unit3 0 unit2;
   }
+}
+.OfficialPhoto div {
+  filter: grayscale(100%);
+  width: 100%;
+  padding-bottom: 100%;
+  height: 0px;
+  border-radius: 100%;
+  background-size: cover;
+  background-color: black;
+  background-position: top center;
+}
 .OfficialInfo {
-  // width: 13rem;
-  margin-right: unit2
 }
 .OfficialOffice {
   margin: 0 0 1rem 0;
@@ -98,14 +109,15 @@
   width: 13rem;
 }
 .OfficialDivider {
-  width: 90%;
+  width: calc(100% - unit2);
   border-bottom: 1px solid #ccc;
-  margin: 0 auto;
-  height: 1px;
+  margin: unit3 unit1;
+  height: 0px;
 }
   @media laptop {
     .OfficialDivider {
       display: none;
+      margin: unit8;
     }
   }
 
@@ -113,17 +125,14 @@
 
 .OverlayCityContainer {
   position: relative;
-  width: calc(100% - unit6);
+  width: 90%;
   margin: unit3;
-  height: 3rem;
-  border-bottom: 1px solid #000;
   font-size: 1.3rem;
 }
-  @media laptop {
-    .OverlayCityContainer {
-      width: 40%;
-      left: 4rem;
-    }
+@media laptop {
+  .OverlayCityContainer {
+    margin: unit8;
+  }
 }
 .OverlayCityClear {
   position: relative;
@@ -172,9 +181,10 @@
   @media laptop {
     .RosterBottomDivider {
       display: block;
+      height: 0px;
       border-bottom: 1px solid #000;
-      width: 85%;
-      margin: 0 auto;
+      width: calc(100% - unit8 - unit8);
+      margin: 0 unit8 unit8 unit8;
     }
   }
 
@@ -185,7 +195,7 @@
 }
 @media laptop {
   .ShareContainer {
-    margin: unit7 0 0 unit7;
+    margin: unit8 0 0 unit8;
   }
 }
 .ShareModule {
@@ -227,7 +237,7 @@ input {
   padding: 0 1rem;
 }
 .OverlaySiteCredit {
-  margin: 6rem 0 2rem 3rem;
+  margin: unit8 0 unit8 unit8;
   font-size: 1.3rem;
 }
   @media laptop {
