--- a/_resources/_styles/type.styl
+++ b/_resources/_styles/type.styl
@@ -36,7 +36,7 @@ h1,h2,h3,h4,h5,h6 {
 .HeadingLarge {
 	font-family: 'Iowanoldstyle', serif;
 	font-size: 3rem;
-  margin: 7rem 4rem 0 4rem;
+  margin: 7rem 0 0 0;
   font-size: 4rem;
   width: 50%;
 }
@@ -52,7 +52,7 @@ h1,h2,h3,h4,h5,h6 {
 }
 .HeadingSmall {
 	font-family: 'CircularStdBold', sans-serif;
-	font-size: 2rem;
+	font-size: 1.6rem;
 }
 .Caption {
 	font-size: 1.1rem;
