--- a/_resources/_styles/landingpage.styl
+++ b/_resources/_styles/landingpage.styl
@@ -18,6 +18,7 @@
   background: #FF3700;
   height: 100vh;
   overflow: scroll;
+  padding: unit3;
 }
 @media laptop {
   .ContentContainer {
@@ -25,7 +26,7 @@
     width: 50%;
     position: relative;
     float: right;
-    padding: 0 0 0 3vw;
+    padding: unit8;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
@@ -38,21 +39,19 @@
   height:18px;
   width: 26px;
   position: relative;
-  top: 4rem;
-  left: 4rem;
 }
 label {
   display: block;
-  margin: 4rem 4rem 0 4rem;
+  margin: 0;
   font-size: 1.5rem;
 }
 @media laptop {
   label {
-    margin: 7rem 4rem 0 4rem;
+    margin: 0;
   }
 }
 .InputZip {
-  margin: 0 2rem 0 4rem;
+  margin: 0 2rem 0 0;
   border: none;
   background: #FF3700;
   border-bottom: 1px solid white;
@@ -81,7 +80,7 @@ label {
   }
 .SiteCredit {
   font-size: 1.3rem;
-  margin: 17% 0 0 4rem;
+  margin: 17% 0 0 0;
 }
 .BorderBottomBlack {
   border-bottom: 1px solid #000;
