--- a/views/index.ejs
+++ b/views/index.ejs
@@ -8,19 +8,11 @@
   </h1>
   <form id="zipForm">
     <label class="WhiteText">
-      Enter your email
+      Enter your zip code
     </label>
     <input type="tel" name="zip" id="zipInput" value="98144" class="InputZip">
     <input type="submit" value="Go" class="SubmitZip">
   </form>
-  <!-- <div class="LandingPageQuote WhiteText">
-    <p class="Italic">
-      &ldquo;When the people become involved... government becomes more accountable, and our society is stronger.&rdquo;
-    </p>
-    <p class="mt4">
-      &ndash;Arnold Schwarzenegger
-    </p>
-  </div> -->
   <p class="SiteCredit">
     Built by <a href="https://twitter.com/jeremypbeasley" target="_blank"><span class="BlackText BorderBottomBlack">@jeremypbeasley</span></a> and <a href="https://twitter.com/jennminerva" target="_blank"><span class="BlackText BorderBottomBlack">@jennminerva</span></a>
     <a href="https://github.com/jeremypbeasley/who-representsme" target="_blank">
