--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -29,9 +29,11 @@
 <body>
 <div id="SnackbarCont"></div>
 <div class="Overlay">
-  <div class="OverlayClose"></div>
+  <!-- <div class="OverlayClose"></div> -->
   <div class="OverlayCityContainer">
-    <div class="OverlayCity">Seattle, WA (98144)</div>
+    <div class="OverlayCity">
+      <p class="HeadingMedium">Seattle,<Br> your elected representatives.</p>
+    </div>
     <!-- <div class="op50 OverlayCityClear">
       Clear
     </div> -->
